--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.15.4",
     "react-native-svg": "^15.12.1",
+    "react-native-toast-message": "^2.3.3",
     "react-redux": "^9.2.0",
     "zod": "^4.1.5"
   },
