--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "@reduxjs/toolkit": "^2.8.2",
     "react": "19.1.0",
     "react-native": "0.81.1",
+    "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.15.4",
     "react-native-svg": "^15.12.1",
     "react-native-toast-message": "^2.3.3",
+    "react-native-worklets": "^0.5.0",
     "react-redux": "^9.2.0",
+    "stacktrace-parser": "^0.1.11",
     "zod": "^4.1.5"
   },
   "devDependencies": {
