--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "@reduxjs/toolkit": "^2.8.2",
+    "lucide-react-native": "^0.542.0",
     "react": "19.1.0",
     "react-native": "0.81.1",
     "react-native-reanimated": "^4.1.0",
