--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^7.3.25",
     "@reduxjs/toolkit": "^2.8.2",
     "lucide-react-native": "^0.542.0",
+    "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-native": "0.81.1",
     "react-native-reanimated": "^4.1.0",
@@ -45,9 +46,11 @@
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "19.1.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.9.2"
   },
   "engines": {
